; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_systrace.c_systrace_provide.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_systrace.c_systrace_provide.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i8*, i32* }

@sysent = common dso_local global i32 0, align 4
@systrace_sysent = common dso_local global %struct.TYPE_3__* null, align 8
@NSYSCALL = common dso_local global i32 0, align 4
@systrace_id = common dso_local global i32 0, align 4
@syscallnames = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [6 x i8] c"entry\00", align 1
@SYSTRACE_ARTIFICIAL_FRAMES = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"return\00", align 1
@DTRACE_IDNONE = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @systrace_provide to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @systrace_provide(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %73

9:                                                ; preds = %2
  %10 = load i32, i32* @sysent, align 4
  %11 = call i32 @systrace_init(i32 %10, %struct.TYPE_3__** @systrace_sysent)
  store i32 0, i32* %5, align 4
  br label %12

12:                                               ; preds = %70, %9
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @NSYSCALL, align 4
  %15 = icmp ult i32 %13, %14
  br i1 %15, label %16, label %73

16:                                               ; preds = %12
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** @systrace_sysent, align 8
  %18 = load i32, i32* %5, align 4
  %19 = zext i32 %18 to i64
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 2
  %22 = load i32*, i32** %21, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %25

24:                                               ; preds = %16
  br label %70

25:                                               ; preds = %16
  %26 = load i32, i32* @systrace_id, align 4
  %27 = load i32*, i32** @syscallnames, align 8
  %28 = load i32, i32* %5, align 4
  %29 = zext i32 %28 to i64
  %30 = getelementptr inbounds i32, i32* %27, i64 %29
  %31 = load i32, i32* %30, align 4
  %32 = call i64 @dtrace_probe_lookup(i32 %26, i32* null, i32 %31, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %25
  br label %70

35:                                               ; preds = %25
  %36 = load i32, i32* @systrace_id, align 4
  %37 = load i32*, i32** @syscallnames, align 8
  %38 = load i32, i32* %5, align 4
  %39 = zext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* @SYSTRACE_ARTIFICIAL_FRAMES, align 4
  %43 = load i32, i32* %5, align 4
  %44 = call i64 @SYSTRACE_ENTRY(i32 %43)
  %45 = inttoptr i64 %44 to i8*
  %46 = call i32 @dtrace_probe_create(i32 %36, i32* null, i32 %41, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %42, i8* %45)
  %47 = load i32, i32* @systrace_id, align 4
  %48 = load i32*, i32** @syscallnames, align 8
  %49 = load i32, i32* %5, align 4
  %50 = zext i32 %49 to i64
  %51 = getelementptr inbounds i32, i32* %48, i64 %50
  %52 = load i32, i32* %51, align 4
  %53 = load i32, i32* @SYSTRACE_ARTIFICIAL_FRAMES, align 4
  %54 = load i32, i32* %5, align 4
  %55 = call i64 @SYSTRACE_RETURN(i32 %54)
  %56 = inttoptr i64 %55 to i8*
  %57 = call i32 @dtrace_probe_create(i32 %47, i32* null, i32 %52, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 %53, i8* %56)
  %58 = load i8*, i8** @DTRACE_IDNONE, align 8
  %59 = load %struct.TYPE_3__*, %struct.TYPE_3__** @systrace_sysent, align 8
  %60 = load i32, i32* %5, align 4
  %61 = zext i32 %60 to i64
  %62 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %59, i64 %61
  %63 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %62, i32 0, i32 1
  store i8* %58, i8** %63, align 8
  %64 = load i8*, i8** @DTRACE_IDNONE, align 8
  %65 = load %struct.TYPE_3__*, %struct.TYPE_3__** @systrace_sysent, align 8
  %66 = load i32, i32* %5, align 4
  %67 = zext i32 %66 to i64
  %68 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %65, i64 %67
  %69 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %68, i32 0, i32 0
  store i8* %64, i8** %69, align 8
  br label %70

70:                                               ; preds = %35, %34, %24
  %71 = load i32, i32* %5, align 4
  %72 = add i32 %71, 1
  store i32 %72, i32* %5, align 4
  br label %12

73:                                               ; preds = %8, %12
  ret void
}

declare dso_local i32 @systrace_init(i32, %struct.TYPE_3__**) #1

declare dso_local i64 @dtrace_probe_lookup(i32, i32*, i32, i8*) #1

declare dso_local i32 @dtrace_probe_create(i32, i32*, i32, i8*, i32, i8*) #1

declare dso_local i64 @SYSTRACE_ENTRY(i32) #1

declare dso_local i64 @SYSTRACE_RETURN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
